--- a/pratica_css.html
+++ b/pratica_css.html
@@ -7,42 +7,32 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Aula CSS - 1</title>
 	<link rel="stylesheet" href="style.css">
-</head >
+</head>
 
 <body>
 
-	<div class="card">
+	<div class="card border">
+		<div class="icone1 border"></div>
 
-		<div class="icone1 border">
-		</div>
+		<h1 class="text title">
+			Meu nome é: <span class="main-color">Adriana</span>
+		</h1>
 
-		<div>
-			<h1 class="title">
-				Meu nome é: <span class="main-col	or">Adriana</span>
-			</h1>
-
-			<p class="text">
-				Mensagem: <span class="main-color">A vida não é um morango!</span>
-			</p>
-		</div>
+		<p class="text">
+			Mensagem: <span class="main-color">A vida não é um morango!</span>
+		</p>
 	</div>
 
-
 	<div class="card border">
+		<div class="icone2 border"></div>
 
-		<div class="icone2 border">
-			
-		</div>
-
-		<div>
-			<h1 class="title">
+			<h1 class="text title">
 				Meu nome é: <span class="main-color">Hugo</span>
 			</h1>
 
 			<p class="text">
 				Mensagem: <span class="main-color">Um dia é da caça, o outro é do caçador.</span>
 			</p>
-		</div>
 	</div>
 
 </body>
